modificaciones de estilos y en el bookin

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5766,7 +5766,7 @@ small {
   height: 36px;
   line-height: 36px;
   outline: 0;
-  padding: 0 2rem;
+  padding: 0 0.5rem;
   text-transform: uppercase;
   vertical-align: middle;
   -webkit-tap-highlight-color: transparent; }
@@ -5799,7 +5799,7 @@ small {
   transition: .2s ease-out;
   cursor: pointer; }
   .btn:hover, .btn-large:hover {
-    background-color: #2bbbad; }
+    background-color: #e53935; }
 
 .btn-floating {
   display: inline-block;
@@ -6181,7 +6181,7 @@ select:focus {
 
 button:focus {
   outline: none;
-  background-color: #2ab7a9; }
+  background-color: #e53935; }
 
 label {
   font-size: 0.8rem;
