--- a/css/main.css
+++ b/css/main.css
@@ -105,8 +105,8 @@ label {
 }
 .card .card-title {
     color: #fff;
-    font-size: 15px;
-    font-weight: 300;
+    font-size: 17px;
+    font-weight: bold;
 }
 .card-contenido{
   font-size: 12px;
@@ -279,9 +279,20 @@ nav .button-collapse i {
 nav a{
   color:black;
 }
-nav ul li{
-  margin-left:40px;
+nav ul li {
+    margin-left: 35px;
 }
+@media screen and (max-width:1400px ) {
+    nav ul li {
+        margin-left: 12px;
+    }
+}
+@media screen and (max-width:1100px ) {
+    nav ul li{
+        margin-left:5px;
+    }
+}
+
 nav ul a {
     font-size: 1rem;
     color: #fff;
@@ -319,10 +330,10 @@ a,a:hover{color:white}
     }
     #animacionIntroLogo{
         position: fixed;
-        width: 50%;
+        width: 80%;
         /* height: 10%; */
         top: 25%;
-        right: 25%;
+        right: 10%;
         z-index: 21;
         color: white;
         text-shadow: -2px -1px black;
