--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 body{	font-family:Junction, serif;}
 .txtCant{font-family:serif;}
 /* declaracion del header*/
-header{position: absolute;top: 0px;left: 0px;width: 100%;height:600px;}
+header{position: absolute;top: 0px;left: 0px;width: 100%;height:600px;z-index:9;}
 h5,h4,h3,h2,h1,label{
     -webkit-margin-before: 0em;
     -webkit-margin-after: 0em;
