modificaciones de estilos en la pagina tras revision de mirchar < diseño >

--- a/css/jquery-ui.css
+++ b/css/jquery-ui.css
@@ -1219,8 +1219,8 @@ body .ui-tooltip {
 	border-radius: 8px;
 }
 .ui-widget-header {
-    border: 1px solid #f44336;
-    background: #f44336;
+    border: 1px solid #FF5A14;
+    background: #FF5A14;
     color: #fff;
     font-weight: bold;
 }
