--- a/css/materialize.css
+++ b/css/materialize.css
@@ -22,10 +22,10 @@
   color: #f3989b !important; }
 
 .materialize-red.lighten-2 {
-  background-color: #ee6e73 !important; }
+  background-color: #FF5A14 !important; }
 
 .materialize-red-text.text-lighten-2 {
-  color: #ee6e73 !important; }
+  color: #FF5A14 !important; }
 
 .materialize-red.lighten-1 {
   background-color: #ea454b !important; }
@@ -94,10 +94,10 @@
   color: #EF5350 !important; }
 
 .red {
-  background-color: #F44336 !important; }
+  background-color: #FF5A14 !important; }
 
 .red-text {
-  color: #F44336 !important; }
+  color: #FF5A14 !important; }
 
 .red.darken-1 {
   background-color: #E53935 !important; }
@@ -760,10 +760,10 @@
   color: #4db6ac !important; }
 
 .teal.lighten-1 {
-  background-color: #ee6e73 !important; }
+  background-color: #FF5A14 !important; }
 
 .teal-text.text-lighten-1 {
-  color: #ee6e73 !important; }
+  color: #FF5A14 !important; }
 
 .teal {
   background-color: #009688 !important; }
@@ -2032,7 +2032,7 @@ ul {
 blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
-  border-left: 5px solid #ee6e73; }
+  border-left: 5px solid #FF5A14; }
 
 i {
   line-height: inherit; }
@@ -2067,7 +2067,7 @@ img.responsive-img, video.responsive-video {
   .pagination li.active a {
     color: #fff; }
   .pagination li.active {
-    background-color: #ee6e73; }
+    background-color: #FF5A14; }
   .pagination li.disabled a {
     cursor: default;
     color: #999; }
@@ -2176,7 +2176,7 @@ ul.staggered-list li {
 footer.page-footer {
   margin-top: 20px;
   padding-top: 20px;
-  background-color: #ee6e73; }
+  background-color: #FF5A14; }
   footer.page-footer .footer-copyright {
     overflow: hidden;
     height: 50px;
@@ -2312,7 +2312,7 @@ td, th {
     .collection .collection-item:last-child {
       border-bottom: none; }
     .collection .collection-item.active {
-      background-color: #ee6e73;
+      background-color: #FF5A14;
       color: #eafaf9; }
   .collection a.collection-item {
     display: block;
@@ -2321,7 +2321,7 @@ td, th {
     -o-transition: 0.25s;
     -ms-transition: 0.25s;
     transition: 0.25s;
-    color: #ee6e73; }
+    color: #FF5A14; }
     .collection a.collection-item:not(.active):hover {
       background-color: #ddd; }
   .collection.with-header .collection-header {
@@ -2335,7 +2335,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #ee6e73; }
+  color: #FF5A14; }
 
 span.badge {
   min-width: 3rem;
@@ -2353,7 +2353,7 @@ span.badge {
     font-weight: 300;
     font-size: 0.8rem;
     color: #fff;
-    background-color: #ee6e73;
+    background-color: #FF5A14;
     border-radius: 2px; }
   span.badge.new:after {
     content: " new"; }
@@ -2388,14 +2388,14 @@ span.badge {
     top: 0;
     left: 0;
     bottom: 0;
-    background-color: #ee6e73;
+    background-color: #FF5A14;
     -webkit-transition: width .3s linear;
     -moz-transition: width .3s linear;
     -o-transition: width .3s linear;
     -ms-transition: width .3s linear;
     transition: width .3s linear; }
   .progress .indeterminate {
-    background-color: #ee6e73; }
+    background-color: #FF5A14; }
     .progress .indeterminate:before {
       content: '';
       position: absolute;
@@ -5246,7 +5246,7 @@ span.badge {
 
 nav {
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #FF5A14;
   width: 100%;
   height: 56px;
   line-height: 56px; }
@@ -5701,7 +5701,7 @@ small {
     letter-spacing: .8px;
     width: 15%; }
     .tabs .tab a {
-      color: #ee6e73;
+      color: #FF5A14;
       display: block;
       width: 100%;
       height: 100%;
@@ -5789,7 +5789,7 @@ small {
 .btn, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #FF5A14;
   text-align: center;
   letter-spacing: .5px;
   -webkit-transition: .2s ease-out;
@@ -5799,7 +5799,7 @@ small {
   transition: .2s ease-out;
   cursor: pointer; }
   .btn:hover, .btn-large:hover {
-    background-color: #e53935; }
+    background-color: #FF5A14; }
 
 .btn-floating {
   display: inline-block;
@@ -5811,7 +5811,7 @@ small {
   height: 37px;
   line-height: 37px;
   padding: 0;
-  background-color: #ee6e73;
+  background-color: #FF5A14;
   border-radius: 50%;
   transition: .3s;
   cursor: pointer;
@@ -5894,7 +5894,7 @@ button.btn-floating {
       background-color: #eee; }
     .dropdown-content li > a, .dropdown-content li > span {
       font-size: 0.9rem;
-      color: #ee6e73;
+      color: #FF5A14;
       display: block;
       padding: 1rem 1rem; }
     .dropdown-content li > a > i {
@@ -6181,7 +6181,7 @@ select:focus {
 
 button:focus {
   outline: none;
-  background-color: #e53935; }
+  background-color: #FF5A14; }
 
 label {
   font-size: 0.8rem;
@@ -6226,10 +6226,10 @@ input[type=text], input[type=password], input[type=email], input[type=url], inpu
   input[type=text]:disabled + label, input[type=text][readonly="readonly"] + label, input[type=password]:disabled + label, input[type=password][readonly="readonly"] + label, input[type=email]:disabled + label, input[type=email][readonly="readonly"] + label, input[type=url]:disabled + label, input[type=url][readonly="readonly"] + label, input[type=time]:disabled + label, input[type=time][readonly="readonly"] + label, input[type=date]:disabled + label, input[type=date][readonly="readonly"] + label, input[type=datetime-local]:disabled + label, input[type=datetime-local][readonly="readonly"] + label, input[type=tel]:disabled + label, input[type=tel][readonly="readonly"] + label, input[type=number]:disabled + label, input[type=number][readonly="readonly"] + label, input[type=search]:disabled + label, input[type=search][readonly="readonly"] + label, textarea.materialize-textarea:disabled + label, textarea.materialize-textarea[readonly="readonly"] + label {
     color: rgba(0, 0, 0, 0.26); }
   input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #ee6e73;
-    box-shadow: 0 1px 0 0 #ee6e73; }
+    border-bottom: 1px solid #FF5A14;
+    box-shadow: 0 1px 0 0 #FF5A14; }
   input[type=text]:focus:not([readonly]) + label, input[type=password]:focus:not([readonly]) + label, input[type=email]:focus:not([readonly]) + label, input[type=url]:focus:not([readonly]) + label, input[type=time]:focus:not([readonly]) + label, input[type=date]:focus:not([readonly]) + label, input[type=datetime-local]:focus:not([readonly]) + label, input[type=tel]:focus:not([readonly]) + label, input[type=number]:focus:not([readonly]) + label, input[type=search]:focus:not([readonly]) + label, textarea.materialize-textarea:focus:not([readonly]) + label {
-    color: #ee6e73; }
+    color: #FF5A14; }
   input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid, input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.valid, input[type=date].valid, input[type=date]:focus.valid, input[type=datetime-local].valid, input[type=datetime-local]:focus.valid, input[type=tel].valid, input[type=tel]:focus.valid, input[type=number].valid, input[type=number]:focus.valid, input[type=search].valid, input[type=search]:focus.valid, textarea.materialize-textarea.valid, textarea.materialize-textarea:focus.valid {
     border-bottom: 1px solid #4CAF50;
     box-shadow: 0 1px 0 0 #4CAF50; }
@@ -6238,11 +6238,11 @@ input[type=text], input[type=password], input[type=email], input[type=url], inpu
     color: #4CAF50;
     opacity: 1; }
   input[type=text].invalid, input[type=text]:focus.invalid, input[type=password].invalid, input[type=password]:focus.invalid, input[type=email].invalid, input[type=email]:focus.invalid, input[type=url].invalid, input[type=url]:focus.invalid, input[type=time].invalid, input[type=time]:focus.invalid, input[type=date].invalid, input[type=date]:focus.invalid, input[type=datetime-local].invalid, input[type=datetime-local]:focus.invalid, input[type=tel].invalid, input[type=tel]:focus.invalid, input[type=number].invalid, input[type=number]:focus.invalid, input[type=search].invalid, input[type=search]:focus.invalid, textarea.materialize-textarea.invalid, textarea.materialize-textarea:focus.invalid {
-    border-bottom: 1px solid #F44336;
-    box-shadow: 0 1px 0 0 #F44336; }
+    border-bottom: 1px solid #FF5A14;
+    box-shadow: 0 1px 0 0 #FF5A14; }
   input[type=text].invalid + label:after, input[type=text]:focus.invalid + label:after, input[type=password].invalid + label:after, input[type=password]:focus.invalid + label:after, input[type=email].invalid + label:after, input[type=email]:focus.invalid + label:after, input[type=url].invalid + label:after, input[type=url]:focus.invalid + label:after, input[type=time].invalid + label:after, input[type=time]:focus.invalid + label:after, input[type=date].invalid + label:after, input[type=date]:focus.invalid + label:after, input[type=datetime-local].invalid + label:after, input[type=datetime-local]:focus.invalid + label:after, input[type=tel].invalid + label:after, input[type=tel]:focus.invalid + label:after, input[type=number].invalid + label:after, input[type=number]:focus.invalid + label:after, input[type=search].invalid + label:after, input[type=search]:focus.invalid + label:after, textarea.materialize-textarea.invalid + label:after, textarea.materialize-textarea:focus.invalid + label:after {
     content: attr(data-error);
-    color: #F44336;
+    color: #FF5A14;
     opacity: 1; }
   input[type=text] + label:after, input[type=password] + label:after, input[type=email] + label:after, input[type=url] + label:after, input[type=time] + label:after, input[type=date] + label:after, input[type=datetime-local] + label:after, input[type=tel] + label:after, input[type=number] + label:after, input[type=search] + label:after, textarea.materialize-textarea + label:after {
     display: block;
@@ -6284,7 +6284,7 @@ input[type=text], input[type=password], input[type=email], input[type=url], inpu
     -ms-transition: color .2s;
     transition: color .2s; }
     .input-field .prefix.active {
-      color: #ee6e73; }
+      color: #FF5A14; }
   .input-field .prefix ~ input, .input-field .prefix ~ textarea {
     margin-left: 3rem;
     width: 92%;
@@ -6414,8 +6414,8 @@ textarea {
 
 [type="radio"]:checked + label:after {
   border-radius: 50%;
-  border: 2px solid #ee6e73;
-  background-color: #ee6e73;
+  border: 2px solid #FF5A14;
+  background-color: #FF5A14;
   z-index: 0;
   -webkit-transform: scale(1.02);
   -moz-transform: scale(1.02);
@@ -6426,12 +6426,12 @@ textarea {
 /* Radio With gap */
 [type="radio"].with-gap:checked + label:before {
   border-radius: 50%;
-  border: 2px solid #ee6e73; }
+  border: 2px solid #FF5A14; }
 
 [type="radio"].with-gap:checked + label:after {
   border-radius: 50%;
-  border: 2px solid #ee6e73;
-  background-color: #ee6e73;
+  border: 2px solid #FF5A14;
+  background-color: #FF5A14;
   z-index: 0;
   -webkit-transform: scale(.5);
   -moz-transform: scale(.5);
@@ -6524,8 +6524,8 @@ form p:last-child {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #ee6e73;
-  border-bottom: 2px solid #ee6e73;
+  border-right: 2px solid #FF5A14;
+  border-bottom: 2px solid #FF5A14;
   -webkit-transform: rotate(40deg);
   -moz-transform: rotate(40deg);
   -ms-transform: rotate(40deg);
@@ -6549,7 +6549,7 @@ form p:last-child {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #ee6e73;
+  border-right: 2px solid #FF5A14;
   border-bottom: none;
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
@@ -6609,8 +6609,8 @@ form p:last-child {
   top: 0px;
   width: 20px;
   height: 20px;
-  border: 2px solid #ee6e73;
-  background-color: #ee6e73;
+  border: 2px solid #FF5A14;
+  background-color: #FF5A14;
   z-index: 0; }
 [type="checkbox"].filled-in:disabled:not(:checked) + label:before {
   background-color: transparent;
@@ -6645,7 +6645,7 @@ form p:last-child {
   background-color: #84c7c1; }
 
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #ee6e73; }
+  background-color: #FF5A14; }
 
 .switch label .lever {
   content: "";
@@ -6804,7 +6804,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #ee6e73;
+  background-color: #FF5A14;
   top: 10px;
   margin-left: -6px;
   -webkit-transform-origin: 50% 50%;
@@ -6821,7 +6821,7 @@ input[type=range] + .thumb {
     display: block;
     width: 30px;
     text-align: center;
-    color: #ee6e73;
+    color: #FF5A14;
     font-size: 0;
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
@@ -6853,7 +6853,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background-color: #ee6e73;
+  background-color: #FF5A14;
   transform-origin: 50% 50%;
   margin: -5px 0 0 0;
   -webkit-transition: 0.3s;
@@ -6880,7 +6880,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #ee6e73;
+  background: #FF5A14;
   margin-top: -5px; }
 
 /*hide the outline behind the border*/
@@ -6912,7 +6912,7 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #ee6e73; }
+  background: #FF5A14; }
 
 input[type=range]:focus::-ms-fill-lower {
   background: #888; }
@@ -7016,7 +7016,7 @@ select {
       left: auto; } }
 
 .side-nav .collapsible-body li.active, .side-nav.fixed .collapsible-body li.active {
-  background-color: #ee6e73; }
+  background-color: #FF5A14; }
   .side-nav .collapsible-body li.active a, .side-nav.fixed .collapsible-body li.active a {
     color: #fff; }
 
@@ -7927,7 +7927,7 @@ select {
 
 .picker__date-display {
   text-align: center;
-  background-color: #ee6e73;
+  background-color: #FF5A14;
   color: #fff;
   padding-bottom: 15px;
   font-weight: 300; }
@@ -7977,7 +7977,7 @@ select {
   border: 1px solid transparent; }
 
 .picker__day.picker__day--today {
-  color: #ee6e73; }
+  color: #FF5A14; }
 
 .picker__day.picker__day--today.picker__day--selected {
   color: #fff; }
@@ -7992,7 +7992,7 @@ select {
   -ms-transform: scale(.9);
   -o-transform: scale(.9);
   transform: scale(.9);
-  background-color: #ee6e73;
+  background-color: #FF5A14;
   color: #ffffff; }
   .picker__day--selected.picker__day--outfocus, .picker__day--selected:hover.picker__day--outfocus, .picker--focused .picker__day--selected.picker__day--outfocus {
     background-color: #a1ded8; }
@@ -8004,7 +8004,7 @@ select {
 .picker__close, .picker__today {
   font-size: 1.1rem;
   padding: 0 1rem;
-  color: #ee6e73; }
+  color: #FF5A14; }
 
 .picker__nav--prev:before, .picker__nav--next:before {
   content: " ";
