--- a/css/page/activities/tours.css
+++ b/css/page/activities/tours.css
@@ -13,7 +13,7 @@ header{
 .price{
     font-size: 18px;
     font-weight: bold;
-    color: #F44336 !important;
+    color: #FF5A14 !important;
     margin-top: 10px;
     margin-bottom: 10px;
     font-family: roboto;
@@ -21,18 +21,18 @@ header{
 .from{
     font-size: 18px;
     font-weight: bold;
-    color: #F44336 !important;
+    color: #FF5A14 !important;
     margin-top: 10px;
 }
 .precioDetalle{
     border-left: 2px solid rgba(0,0,0,0.5);
 }
 .infoResult{
-    color: #ee6e73;
+    color: #FF5A14;
     font-size: 37px;
 }
 .infoSearch{
-    color: #ee6e73;
+    color: #FF5A14;
     font-size: 22px;
 }
 .descriptionTour{
@@ -56,7 +56,7 @@ header{
     text-align: justify;
 }
 .textoTitulo{
-    color: #ee6e73;
+    color: #FF5A14;
     font-size: 15px;
 }
 /* estilo del carousel [Inicio]*/
@@ -71,7 +71,7 @@ header{
 /* estilo del carousel [Final]*/
 .rateRight{
     text-align: right;
-    color: #ee6e73;
+    color: #FF5A14;
     font-size: 19px;
     font-weight: bold;
 }
@@ -81,7 +81,7 @@ header{
     font-weight: bold;
 }
 .detalles h6{
-    color:#ee6e73 ;
+    color:#FF5A14 ;
     font-weight: bold;
 
 }
