--- a/css/page/destinations/destinations.css
+++ b/css/page/destinations/destinations.css
@@ -3,7 +3,7 @@ header{
 	background-size:cover;
 }
 a{ 
-  color:#f44336;  
+  color:#FF5A14;  
 }
 #our-hotels, #mostWanted {
     padding: 20px 0;
@@ -60,7 +60,7 @@ a{
     font-size: 18px;
     text-align: center;
     -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    -moz-box-sizing: border-box;130
     box-sizing: border-box
 }
 
@@ -89,7 +89,7 @@ a{
 }
 
 .elementList .elementTax .elementPrice {
-    color: #ee6e73;
+    color: #FF5A14;
     font-size: 30px;
     font-weight: 300;
     padding: 5px 0;
@@ -101,7 +101,7 @@ a{
 .elementList .elementTax .notAvailable {
     font-size: 14px;
     font-weight: 300;
-    color: #ee6e73
+    color: #FF5A14
 }
 
 .elementList .elementTax .elementPrice .currency_code {
@@ -129,11 +129,11 @@ a{
 
 .elementList .elementTax .elementBook .book {
     width: 100%;
-    padding: 10px 0;
+    padding: 0px 0;
     font-size: 20px;
     display: block;
     border: none;
-    background: #ee6e73;
+    background: #FF5A14;
     color: #fff;
     cursor: pointer;
     -webkit-box-sizing: border-box;
@@ -187,7 +187,7 @@ a{
 .owl-carousel .owl-item .item .caption {
     max-width: 272px;
     width: 100%;
-    background: #ee6e73;
+    background: #FF5A14;
     color: #fff;
     text-align: center;
     font-size: 1rem;
@@ -238,7 +238,7 @@ a{
 .infoSearch {
     font-size: 16px;
     text-align: center;
-    color: #ee6e73;
+    color: #FF5A14;
     padding: 10px 0;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -248,7 +248,7 @@ a{
 .infoResult {
     font-size: 30px;
     padding: 10px 0;
-    color: #ee6e73;
+    color: #FF5A14;
     text-align: center;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -256,7 +256,7 @@ a{
 }
 
 .infoRooms {
-    color: #ee6e73;
+    color: #FF5A14;
     font-size: 16px;
     text-align: left;
     padding: 10px 0;
@@ -270,7 +270,7 @@ a{
 .openBooking {
     margin-top: 10px;
     color: #fff;
-    background: #ee6e73;
+    background: #FF5A14;
     display: block;
     padding: 10px
 }
@@ -459,18 +459,18 @@ a{
 }
 
 .detail .detailHead h4 {
-    color: #ee6e73;
+    color: #FF5A14;
     text-align: center
 }
 
 .detail .detailHead h6 {
-    color: #ee6e73;
+    color: #FF5A14;
     text-align: center
 }
 
 .detail .detailHead p {
     margin: 0;
-    color: #ee6e73;
+    color: #FF5A14;
     text-align: center
 }
 
@@ -483,7 +483,7 @@ a{
 }
 
 .detail .detailHead .onlyAdultsLabel {
-    color: #ee6e73;
+    color: #FF5A14;
     text-align: center
 }
 
@@ -585,7 +585,7 @@ a{
 }
 
 .detail .elementList .elementData .hotelPromotion span, .detail .elementList .elementData .hotelBookWindow span, .detail .elementList .elementData .hotelPromoValid span {
-    color: #ee6e73;
+    color: #FF5A14;
     display: block
 }
 
@@ -1027,7 +1027,7 @@ a{
         width: 20%
     }
     .jplist .sortSearch .jplist-select {
-        width: 100%
+        width: 20%
     }
     #hotelsLF .elementList .elementData .elementDesc {
         font-size: 14px
