--- a/css/page/transfers/transfers.css
+++ b/css/page/transfers/transfers.css
@@ -3,7 +3,7 @@ header{
     background-size:cover;
 }
 .titulosColor{
-    color:#ee6e73;
+    color:#FF5A14;
 }
 .card-tours{
     padding:10px;
@@ -16,7 +16,7 @@ header{
 .price{
     font-size: 18px;
     font-weight: bold;
-    color: #F44336 !important;
+    color: #FF5A14 !important;
     margin-top: 10px;
     margin-bottom: 10px;
     font-family: roboto;
@@ -24,17 +24,17 @@ header{
 .from{
     font-size: 18px;
     font-weight: bold;
-    color: #F44336 !important;
+    color: #FF5A14 !important;
     margin-top: 10px;
 }
 .precioDetalle{
     border-left: 2px solid rgba(0,0,0,0.5);
 }
 .infoResult{
-    color: #ee6e73;
+    color: #FF5A14;
     font-size: 37px;
 }
 .infoSearch{
-    color: #ee6e73;
+    color: #FF5A14;
     font-size: 22px;
 }
