--- a/css/page/checkout/checkout.css
+++ b/css/page/checkout/checkout.css
@@ -96,7 +96,7 @@ a:hover{
 #formularioCheckout h2 {
     font-size: 17pt;
     border-bottom: 1px solid #dbdbdb;
-    color: rgb(0, 170, 166);
+    color: #FF5A14;
     margin: 5px 0px 0px 10px
 }
 
