--- a/css/materialize.css
+++ b/css/materialize.css
@@ -6404,6 +6404,22 @@ textarea {
   -ms-transition: .28s ease;
   transition: .28s ease; }
 
+[type="radio"]:checked+label:after {
+    border-radius: 50%;
+    border: 2px solid #FF5A14;
+    background-color: #FF5A14;
+    z-index: 0;
+    -webkit-transform: scale(1.02);
+    -moz-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+    -o-transform: scale(1.02);
+    transform: scale(1.02);
+}
+[type="radio"]:not(:checked), [type="radio"]:checked {
+    position: absolute;
+    left: -9999px;
+    visibility: hidden;
+}
 /* Unchecked styles */
 [type="radio"]:not(:checked) + label:before {
   border-radius: 50%;
