--- a/css/page/jquery-ui.css
+++ b/css/page/jquery-ui.css
@@ -893,7 +893,7 @@ body .ui-tooltip {
 
 .ui-widget-header {
     border: 1px solid #e78f08;
-    background: #f6a828 url(images/ui-bg_gloss-wave_35_f6a828_500x100.png) 50% 50% repeat-x;
+    /*background: #f6a828 url(images/ui-bg_gloss-wave_35_f6a828_500x100.png) 50% 50% repeat-x;*/
     color: #fff;
     font-weight: 300
 }
@@ -1774,7 +1774,7 @@ body .ui-tooltip {
 
 .ui-widget-header {
     border: 1px solid #00aaa6;
-    background: #00aaa6;
+    /*background: #00aaa6;*/
     color: #fff;
     font-weight: 300
 }
