se cambian idioma a las pagina seccion por seccion pendiente las busquedas y el checkout

--- a/es/css/main.css
+++ b/es/css/main.css
@@ -2,12 +2,12 @@ header {
     background: url('/images/bg/activities.jpg');
     background-size: cover;
 }
-
+ 
 #labelInBookin {
     color: white;
 }
 /* fuente de la pagina */
-@font-face {font-family: Junction;src: url("/font/Junction.otf") format("opentype");}
+@font-face {font-family: Junction;src: url("/es/font/Junction_02.ttf") format("opentype");}
 body{	font-family:Junction, serif;}
 .txtCant{font-family:serif;}
 /* declaracion del header*/
