--- a/es/css/materialize.css
+++ b/es/css/materialize.css
@@ -2214,7 +2214,7 @@ td, th {
   padding: 15px 5px;
   display: table-cell;
   text-align: left;
-  vertical-align: middle;
+  vertical-align: baseline;
   border-radius: 2px; }
 
 @media only screen and (max-width : 992px) {
