--- a/es/css/checkout.css
+++ b/es/css/checkout.css
@@ -38,7 +38,7 @@ label {
   height:100%;
   z-index:19;
   background-color:rgba(0,0,0,0.8);
-  overflow:hidden;
+  overflow:auto;
 }
 .cerrar-close{
   cursor:pointer;
