--- a/es/css/main.css
+++ b/es/css/main.css
@@ -6,9 +6,9 @@ header {
 #labelInBookin {
     color: white;
 }
-/* fuente de la pagina */
+/* fuente de la pagina 
 @font-face {font-family: Junction;src: url("/es/font/Junction_02.ttf") format("opentype");}
-body{	font-family:Junction, serif;}
+body{	font-family:Junction, serif;}*/
 .txtCant{font-family:serif;}
 /* declaracion del header*/
 header{position: absolute;top: 0px;left: 0px;width: 100%;height:600px;}
@@ -47,7 +47,7 @@ body {
   height:100%;
   z-index:19;
   background-color:rgba(0,0,0,0.8);
-  overflow:hidden;
+  overflow:auto;
 }
 .cerrar-close{
   cursor:pointer;
@@ -464,10 +464,11 @@ a,a:hover{color:black}
     background-position: 325px 610px;
     width: 50px;
     height: 49px;
+
 }
 
 .error{
-    background-color: white;
+    background-color: transparent;
     color: red;
     z-index: 1;
 }
