correcciones en la parte de promociones asi como url de hoteles y tours en en los index de los correspondientes apartados

--- a/css/page/ofertas/ofertas.css
+++ b/css/page/ofertas/ofertas.css
@@ -2,6 +2,12 @@ header{
     background:url('/images/bg/news.jpg');
     background-size:cover;
 }
+h1 {
+    font-size: 1rem;
+    line-height: 110%;
+    margin: 1.78rem 0 1.424rem 0;
+
+}
 h2 {
     font-size: 1rem;
     line-height: 110%;
