--- a/es/css/main.css
+++ b/es/css/main.css
@@ -6,9 +6,9 @@ header {
 #labelInBookin {
     color: white;
 }
-/* fuente de la pagina 
+/* fuente de la pagina */
 @font-face {font-family: Junction;src: url("/es/font/Junction_02.ttf") format("opentype");}
-body{	font-family:Junction, serif;}*/
+body{	font-family:Junction, serif;}
 .txtCant{font-family:serif;}
 /* declaracion del header*/
 header{position: absolute;top: 0px;left: 0px;width: 100%;height:600px;}
@@ -26,6 +26,11 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+}
+
+.collapsible-body p {
+    margin: 0;
+    padding: 0rem;
 }
 
 /* modales*/
